@@ -9,6 +9,8 @@
 -- Avoid conflict of warning macro with MSVC pragmas in two places. Also
    fix UWP build with strerror check and move down inclusion of intsym.h
    (bug 316).
+-- Disable libout123 (and mpg123, out123) on UWP with cmake to get at least
+   the decoder lib built (317).
 - libout123: Pulse module advertises wider format support now, not
   just s16. This makes mpg123 -e s24 work with it, not just out123.
 - libmpg123:
